...
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="57dp">

            <LinearLayout
                android:id="@+id/ServiceLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:context="com.group1.servicesapp.UI.ServiceBrowse">

            </LinearLayout>
        </ScrollView>

        <SearchView
            android:id="@+id/searchText"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
...
