...
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="username">Username</string>
    <string name="pass">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="skip_the_service">SkipTheService</string>
    <string name="no_account_register">No account? Register</string>
    <string name="todo">TODO</string>
    <string name="nothing_here_yet">Nothing Here Yet!</string>

    <string name="Welcome">Welcome to our app!</string>
...
